--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,6 @@
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="parent">
-
 
         <TextView
             android:id="@+id/tvScore"
@@ -51,6 +43,7 @@
         <Button
             android:id="@+id/btn_play"
             android:layout_width="350dp"
+            android:onClick="mulaiPermainan"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageView2"
             android:layout_marginLeft="20dp"
@@ -70,8 +63,7 @@
             android:id="@+id/btn_close_app"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
-
-            android:layout_below="@id/button2"
+            android:onClick="keluarPermainan"
             android:layout_below="@id/btn_about"
 
             android:layout_marginLeft="20dp"
