--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -26,6 +26,7 @@
             android:layout_below="@+id/txt_hadiah_sekarang"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="35dp"
+            android:onClick="bantuanFifty2"
             android:text="50 : 50" />
 
         <Button
@@ -36,6 +37,7 @@
             android:layout_toRightOf="@id/btn_help_fifty2"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
+            android:onClick="tambahProgress"
             android:text="Call a Friend" />
 
         <Button
@@ -47,5 +49,70 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:text="Vote" />
+
+        <TextView
+            android:id="@+id/tv_pertanyaan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_help_call"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_centerInParent="true"
+            android:textSize="17dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="Siapakah presiden pertama Negara Indonesia?" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/btn_help_call"
+            android:layout_marginTop="180dp"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_answer_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:textAllCaps="false"
+                android:text="A. Adolf Hitler" />
+            <Button
+                android:id="@+id/btn_answer_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="B. Ir. Soekarno"
+                android:textAllCaps="false"/>
+            <Button
+                android:id="@+id/btn_answer_c"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:textAllCaps="false"
+                android:text="C. Sujiwo Tejo" />
+            <Button
+                android:id="@+id/btn_answer_d"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:textAllCaps="false"
+                android:text="D. John Lennon" />
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
+
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
