--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/wwtbamBackground"
     tools:context="com.example.dimas.helloworlddyr.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -19,26 +19,13 @@
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
-        <TextView
-            android:id="@+id/tvScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="13dp"
-            android:text="Who Wants to be a Millionaire"
-            android:textSize="18sp" />
-
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="170dp"
-            android:layout_height="170dp"
-            android:layout_alignTop="@+id/tvScore"
+            android:layout_width="270dp"
+            android:layout_height="270dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:contentDescription="@string/caf"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:layout_marginTop="10dp"
+            android:src="@drawable/millionaire"/>
 
         <Button
             android:id="@+id/btn_play"
@@ -46,8 +33,8 @@
             android:onClick="mulaiPermainan"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageView2"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
             android:text="Bermain" />
 
         <Button
@@ -55,7 +42,7 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_play"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:text="Tentang permainan" />
 
@@ -66,7 +53,7 @@
             android:onClick="keluarPermainan"
             android:layout_below="@id/btn_about"
 
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:text="Keluar" />
 
