--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="merah">#FF0000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="wwtbamBackground">#39164c</color>
+    <color name="orange">#FF9111</color>
+
 </resources>
