--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_uangAnda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -25,9 +26,32 @@
 
 
     <Button
+        android:id="@+id/btn_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Main Lagi?"
         android:textSize="18dp"
-        android:layout_marginTop="50dp" />
+        android:onClick="mulaiPermainan"
+        android:layout_marginTop="50dp"
+        android:textAllCaps="false"/>
+
+    <Button
+        android:id="@+id/btn_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Menu Awal"
+        android:textAllCaps="false"
+        android:textSize="18dp"
+        android:onClick="backToHome"
+        android:layout_marginTop="10dp" />
+
+    <Button
+        android:id="@+id/btn_keluar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Keluar"
+        android:onClick="keluarPermainan"
+        android:textAllCaps="false"
+        android:textSize="18dp"
+        android:layout_marginTop="10dp" />
 </LinearLayout>
