--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,10 +10,11 @@
 
     <TextView
         android:id="@+id/tv_uangAnda"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Uang anda"
+        android:gravity="center"
         android:layout_marginTop="50dp"/>
 
     <TextView
