Bantuan Call a Friend FIXXXXX

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="white">#FFFFFF</color>
     <color name="wwtbamBackground">#39164c</color>
     <color name="orange">#FF9111</color>
+    <color name="yellow">#fdb827</color>
+    <color name="black">#80000000</color>
+    <color name="blackMurni">#000000</color>
 
 </resources>
