--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -2,15 +2,57 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="contentDescription"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/wwtbamBackground"
     tools:context="com.example.dimas.helloworlddyr.PlayActivity">
 
+    <LinearLayout
+        android:id="@+id/frame_layout_callafriend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/black"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/einstein" />
+
+        <TextView
+            android:id="@+id/tv_callafriend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="@color/white" />
+
+        <Button
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/yellow"
+            android:onClick="tutupBantuanCall"
+            android:text="Tutup"
+            android:textAllCaps="false"
+            android:textColor="@color/blackMurni" />
+
+    </LinearLayout>
+
     <ScrollView
+        android:id="@+id/frame_permainan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
 
 
         <RelativeLayout
@@ -56,7 +98,7 @@
                     android:id="@+id/btn_help_call"
                     android:layout_width="120dp"
                     android:layout_height="50dp"
-                    android:onClick="tambahProgress"
+                    android:onClick="bantuanCallaFriend"
                     android:src="@drawable/wwtbam2" />
 
                 <ImageView
@@ -105,8 +147,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:text="A. Adolf Hitler"
                     android:onClick="cekJawaban"
+                    android:text="A. Adolf Hitler"
                     android:textAllCaps="false" />
 
                 <Button
@@ -115,8 +157,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:text="B. Ir. Soekarno"
                     android:onClick="cekJawaban"
+                    android:text="B. Ir. Soekarno"
                     android:textAllCaps="false" />
 
                 <Button
@@ -125,8 +167,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:text="C. Sujiwo Tejo"
                     android:onClick="cekJawaban"
+                    android:text="C. Sujiwo Tejo"
                     android:textAllCaps="false" />
 
                 <Button
@@ -135,22 +177,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:text="D. John Lennon"
                     android:onClick="cekJawaban"
+                    android:text="D. John Lennon"
                     android:textAllCaps="false" />
             </LinearLayout>
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center">
-
-                <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@drawable/instein"/>
-
-            </FrameLayout>
         </RelativeLayout>
 
     </ScrollView>
