--- a/app/src/main/res/layout/activity_about_game.xml
+++ b/app/src/main/res/layout/activity_about_game.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/wwtbamBackground"
     tools:context="com.example.dimas.helloworlddyr.AboutGameActivity">
 
     <ScrollView
@@ -21,51 +22,70 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:text="Tentang Game"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
+
             <TextView
                 android:id="@+id/tv_tentanggame"
+                android:textColor="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textAlignment="center"
                 android:layout_below="@+id/tv_about"
                 android:text="Who Wants to be a Millionaire adalah sebuah kuis yang menawarkan hadiah uang tunai dalam jumlah besar untuk peserta yang bisa menjawab soal  pilihan ganda yang mengasah otak."
-                android:textSize="20sp" />
+                android:textSize="18sp" />
             <TextView
                 android:id="@+id/tv_bantuan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
+                android:textAlignment="gravity"
                 android:layout_below="@+id/tv_tentanggame"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:text="Bantuan  :"
-                android:textSize="20sp" />
+                android:textSize="18sp"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:id="@+id/tv_fifty2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
+                android:textAlignment="gravity"
                 android:layout_below="@+id/tv_bantuan"
-                android:text="50:50 (Fifty-fifty) atau 1:1, komputer akan menghilangkan dua pilihan yang salah."
-                android:textSize="20sp" />
+                android:text="1. 50:50 (Fifty-fifty) atau 1:1, komputer akan menghilangkan dua pilihan yang salah."
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:id="@+id/tv_callafren"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_fifty2"
-                android:textAlignment="center"
-                android:text="Phone a Friend, menelepon seseorang untuk bertanya selama 30 detik."
-                android:textSize="20sp" />
+                android:textAlignment="gravity"
+                android:text="2. Phone a Friend, menelepon seseorang untuk bertanya selama 30 detik."
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:id="@+id/tv_askaudience"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_callafren"
-                android:textAlignment="center"
-                android:text="Ask the Audience, meminta suara penonton dan kemudian hasilnya disajikan dalam bentuk grafik."
-                android:textSize="20sp" />
+                android:textAlignment="gravity"
+                android:text="3. Ask the Audience, meminta suara penonton dan kemudian hasilnya disajikan dalam bentuk grafik."
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:id="@+id/tv_tentangpembuatgame"
@@ -73,45 +93,71 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_askaudience"
                 android:textAlignment="center"
+                android:layout_marginTop="20dp"
+
                 android:text="Game ini dibuat oleh  :"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
             <TextView
                 android:id="@+id/tv_LILIK"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_tentangpembuatgame"
-                android:textAlignment="center"
+                android:textAlignment="gravity"
                 android:text="Lilik Asih I      (15051204005)."
-                android:textSize="20sp" />
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:id="@+id/tv_fanny"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_LILIK"
-                android:textAlignment="center"
+                android:textAlignment="gravity"
                 android:text="Fanny Ratna S     (15051204009)."
-                android:textSize="20sp" />
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:id="@+id/tv_audy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_fanny"
-                android:textAlignment="center"
+                android:textAlignment="gravity"
                 android:text="Audy Yanuar R     (15051204026)."
-                android:textSize="20sp" />
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:id="@+id/tv_dimas"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_audy"
-                android:textAlignment="center"
+                android:textAlignment="gravity"
                 android:text="Dimas Yoan R      (15051204030)."
-                android:textSize="20sp" />
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
-
+            <Button
+                android:id="@+id/btn_back"
+                android:text="Kembali"
+                android:textAllCaps="false"
+                android:layout_below="@+id/tv_dimas"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"
+                android:background="@color/orange"
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:onClick="kembaliKeMenu"
+                />
         </RelativeLayout>
     </ScrollView>
 </LinearLayout>
