--- a/app/src/main/res/layout/activity_about_game.xml
+++ b/app/src/main/res/layout/activity_about_game.xml
@@ -156,6 +156,7 @@
                 android:background="@color/orange"
                 android:layout_width="70dp"
                 android:layout_height="30dp"
+                android:layout_marginBottom="20dp"
                 android:onClick="kembaliKeMenu"
                 />
         </RelativeLayout>
